Fixing spacing for Slack on regular screen size

--- a/css/index.css
+++ b/css/index.css
@@ -605,7 +605,7 @@
     max-width: 96%;
     margin-top: 0vw;
     margin-bottom: 2vh;
-    margin-left: -6vw;
+    margin-left: -4.5w;
   }
   .back2top {
     margin-top: 60px;
